[package]
name = "meteoswiss-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["alloc"] }
color-eyre = "0.6.5"
csv = "1.4.0"
encoding_rs = "0.8.35"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
